# ai-from-scratch

./: .gitignore  README.md  requirements.txt
01_foundations/: 01_python_basics.py  01_python_crash.py  02_tensors.py  03_autograd.py  04_training_loop.py
02_transformer/: 01_multi_head_attention.py  02_positional_encoding.py  03_transformer_block.py  04_mini_gpt.py  05_train_on_shakespeare.py  06_cross_attention.py  07_encoder_decoder.py  08_vit.py  09_mixture_of_experts.py
03_diffusion/: 01_forward_diffusion.py  02_unet_denoiser.py  03_ddpm_trainer.py  04_train_on_cifar10.py  05_vae.py  06_dit.py  07_flow_matching.py
04_rl/: 01_policy_gradient.py  02_ppo.py  03_rlhf_pipeline.py
05_robotics/: 01_diffusion_policy.py  02_world_model.py
05_robotics/ros2/: README.md  demo_navigation.py  learn.md  package.xml  setup.py
05_robotics/ros2/ros2_nav_course/: __init__.py
05_robotics/ros2/ros2_nav_course/control/: control_node.py
05_robotics/ros2/ros2_nav_course/decision/: decision_node.py
05_robotics/ros2/ros2_nav_course/perception/: sensor_node.py
05_robotics/ros2/ros2_nav_course/planning/: astar_node.py
05_robotics/ros2/ros2_nav_course/simulation/: robot_model.py  world_2d.py
05_robotics/ros2/ros2_nav_course/slam/: costmap_node.py  rtabmap_node.py
05_robotics/ros2/ros2_nav_course/utils/: mock_ros2.py  visualizer.py
06_harness/: 01_model_registry.py  02_prompt_template.py  03_simple_agent_loop.py
utils/: mps_utils.py
